fix: return all MerkleTree state changes at a block.
