# rpc/generated-sources/cardano-rpc-server/api/openapi.yaml
@@ -17,9 +17,9 @@ paths:
           description: Successful operation
       summary: Get the last finalized block
       x-eov-operation-handler: controllers/DefaultController
-  /api/indexer/merkleTree/{blockNumber}:
+  /api/indexer/merkleTrees/{blockNumber}:
     get:
-      operationId: merkleTreeByBlockNumber
+      operationId: merkleTreesByBlockNumber
       parameters:
       - description: Block number to retrieve the MerkleTree
         explode: false
@@ -35,9 +35,18 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/merkleTreeByBlockNumber_200_response'
+                $ref: '#/components/schemas/merkleTreesByBlockNumber_200_response'
           description: Successful operation
-      summary: Get the MerkleTree that was in the OutboxUtxo at the given blockNumber
+      summary: " Retrieve the states of the MerkleTree corresponding to the specified\
+        \ 'blockNumber'. The behavior depends on the number and presence of dispatched\
+        \ messages within the block. - If there are no dispatched messages at 'blockNumber',\
+        \ the method returns the MerkleTree state following the most recent dispatched\
+        \ message from a previous block, or an empty MerkleTree if no prior messages\
+        \ exist. - If there's only a single dispatched message within 'blockNumber',\
+        \ the method returns the MerkleTree state after processing this message. -\
+        \ If 'blockNumber' contains multiple dispatched messages, the method returns\
+        \ the sequence of MerkleTree states corresponding to each dispatched message,\
+        \ in the order of their processing. "
       x-eov-operation-handler: controllers/DefaultController
   /api/indexer/messages/{fromBlock}/{toBlock}:
     get:
@@ -72,27 +81,50 @@ paths:
       x-eov-operation-handler: controllers/DefaultController
 components:
   schemas:
+    merkleTreesByBlockNumber_200_response_merkleTrees_inner:
+      example:
+        count: 1
+        branches:
+        - branches
+        - branches
+        - branches
+        - branches
+        - branches
+      properties:
+        count:
+          example: 1
+          type: integer
+        branches:
+          items:
+            type: string
+          maxItems: 32
+          minItems: 32
+          type: array
+      required:
+      - branches
+      - count
+      type: object
     messagesByBlockRange_200_response:
       example:
         messages:
         - block: 3
           message:
-            destinationDomain: 0xCA
-            sender: 0x0000000000000000000000000000000000000CA1
-            recipient: 0x0000000000000000000000000000000000000EA1
-            body: 0xADA
+            destinationDomain: destinationDomain
+            sender: sender
+            recipient: recipient
+            body: body
             version: 0
-            nonce: 0
-            originDomain: 0xEF
+            nonce: 6
+            originDomain: originDomain
         - block: 3
           message:
-            destinationDomain: 0xCA
-            sender: 0x0000000000000000000000000000000000000CA1
-            recipient: 0x0000000000000000000000000000000000000EA1
-            body: 0xADA
+            destinationDomain: destinationDomain
+            sender: sender
+            recipient: recipient
+            body: body
             version: 0
-            nonce: 0
-            originDomain: 0xEF
+            nonce: 6
+            originDomain: originDomain
       properties:
         messages:
           items:
@@ -105,13 +137,13 @@ components:
       example:
         block: 3
         message:
-          destinationDomain: 0xCA
-          sender: 0x0000000000000000000000000000000000000CA1
-          recipient: 0x0000000000000000000000000000000000000EA1
-          body: 0xADA
+          destinationDomain: destinationDomain
+          sender: sender
+          recipient: recipient
+          body: body
           version: 0
-          nonce: 0
-          originDomain: 0xEF
+          nonce: 6
+          originDomain: originDomain
       properties:
         block:
           example: 3
@@ -122,84 +154,59 @@ components:
       - block
       - message
       type: object
-    merkleTreeByBlockNumber_200_response:
+    merkleTreesByBlockNumber_200_response:
       example:
-        merkleTree:
-          count: 1
-          branches:
-          - 0x3b3153b5b2c1c50efca4b92a3804a037ceb79769545f8f4f85dec3bdbbaa7df5
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
         blockNumber: 5
+        merkleTrees:
+        - count: 1
+          branches:
+          - branches
+          - branches
+          - branches
+          - branches
+          - branches
+        - count: 1
+          branches:
+          - branches
+          - branches
+          - branches
+          - branches
+          - branches
       properties:
         blockNumber:
           example: 5
           type: integer
-        merkleTree:
-          $ref: '#/components/schemas/merkleTreeByBlockNumber_200_response_merkleTree'
+        merkleTrees:
+          items:
+            $ref: '#/components/schemas/merkleTreesByBlockNumber_200_response_merkleTrees_inner'
+          type: array
       required:
       - blockNumber
-      - merkleTree
+      - merkleTrees
       type: object
     messagesByBlockRange_200_response_messages_inner_message:
       example:
-        destinationDomain: 0xCA
-        sender: 0x0000000000000000000000000000000000000CA1
-        recipient: 0x0000000000000000000000000000000000000EA1
-        body: 0xADA
+        destinationDomain: destinationDomain
+        sender: sender
+        recipient: recipient
+        body: body
         version: 0
-        nonce: 0
-        originDomain: 0xEF
+        nonce: 6
+        originDomain: originDomain
       properties:
         version:
-          example: 0
           type: integer
         nonce:
-          example: 0
           type: integer
         originDomain:
-          example: 0xEF
           type: string
         sender:
-          example: 0x0000000000000000000000000000000000000CA1
           type: string
         destinationDomain:
-          example: 0xCA
           type: string
         recipient:
-          example: 0x0000000000000000000000000000000000000EA1
           type: string
         body:
-          example: 0xADA
           type: string
       required:
       - body
@@ -209,89 +216,6 @@ components:
       - recipient
       - sender
       - version
-      type: object
-    merkleTreeByBlockNumber_200_response_merkleTree:
-      example:
-        count: 1
-        branches:
-        - 0x3b3153b5b2c1c50efca4b92a3804a037ceb79769545f8f4f85dec3bdbbaa7df5
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-        - 0x0000000000000000000000000000000000000000000000000000000000000000
-      maxItems: 32
-      minItems: 32
-      properties:
-        count:
-          example: 1
-          type: integer
-        branches:
-          example:
-          - 0x3b3153b5b2c1c50efca4b92a3804a037ceb79769545f8f4f85dec3bdbbaa7df5
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          - 0x0000000000000000000000000000000000000000000000000000000000000000
-          items:
-            type: string
-          type: array
-      required:
-      - branches
-      - count
       type: object
     lastFinalizedBlock_200_response:
       example:
